# indi_gphoto_ng

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera.h  gphoto_ccd.cpp  gphoto_ccd.h  indi_gphoto_ng.kdev4  indi_gphoto_ng.xml  indi_gphoto_ng_old.xml  logger.h  realcamera.cpp  realcamera.h  simulationcamera.cpp  simulationcamera.h
docker/indi_gphoto_ng_ccd/: docker-compose.yml
docker/indi_gphoto_ng_ccd/wily/: Dockerfile
docker/indi_gphoto_ng_ccd/wily/root/etc/apt/sources.list.d/: indi-ppa.key  indi-ppa.list
docker/indi_gphoto_ng_ccd/xenial/: Dockerfile
docker/indi_gphoto_ng_ccd/xenial/root/etc/apt/sources.list.d/: indi-ppa.list
